# test-app

./: .gitignore
test-api/: Cargo.toml  Dockerfile
test-api/src/: api.rs  auth.rs  config.rs  error.rs  firestore.rs  lib.rs  main.rs  models.rs
test-api/src/api/: create_user.rs  delete_user.rs  games.rs  get_users.rs  update_user.rs  users.rs
test-api/src/models/: chat.rs  model.rs  user.rs
test-api/src/proxy/: chat.rs
test-api/src/websocket/: server.rs  session.rs
test-front/: package-lock.json  package.json
test-front/src/: ApiClient.ts  App.tsx  Routes.tsx  TopBar.tsx  main.tsx
test-front/src/api/: ApiClient.ts
test-front/src/hooks/: useFirebase.ts  useLogout.ts  useUser.ts
test-front/src/lib/: ApiClientContext.tsx
test-front/src/pages/: GamePage.tsx  LoginPage.tsx  MainPage.tsx
