[package]
name = "test-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
dotenv = "0.15.0"
firestore-db-and-auth = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.57"
futures-util = "0.3.30"
